fix wrapping

--- a/css/pages/list.css
+++ b/css/pages/list.css
@@ -459,6 +459,13 @@
     }
 }
 
+.search-box {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    flex-wrap: nowrap;
+}
+
 /* scruffie: bruh i have no idea what im doing idek if this works bru" */
 /* scruffie: it appears i have figured it out :333333 */
 /* scrffie: i leave comments everytime i come here and nobody is gonna notice*/
